fix: field add border config

--- a/src/form/api.yaml
+++ b/src/form/api.yaml
@@ -119,6 +119,11 @@
       type: string | Array
       description: 验证规则。简写格式为字符串类型，完整格式或混合格式为数组类型
       compType: validationRulesSelect
+    - name: border
+      title: 是否显示底边框
+      type: boolean
+      default: true
+      description: 是否显示底边框
   slots:
     - concept: Slot
       name: input
