--- a/src/progress/api.yaml
+++ b/src/progress/api.yaml
@@ -1,5 +1,5 @@
 - name: van-progress
-  icon: progress
+  icon: linear-progress
   title: 进度条
   labels:
     - Display
@@ -8,26 +8,25 @@
   nested: false
   attrs:
     - name: percentage
-      title: 进度百分比	
+      title: 进度百分比
       type: number | string
       sync: true
       model: true
       description: 0
-    - name: stroke-width	
-      title: 进度条粗细	
-      type:  numer | string
+    - name: stroke-width
+      title: 进度条粗细
+      type: numer | string
       default: 4
-      description: 	进度条粗细，默认单位为px
+      description: 进度条粗细，默认单位为px
     - name: inactive
-      title: 是否置灰	
+      title: 是否置灰
       type: boolean
       default: false
-      description: 是否置灰	
-    - name:  show-pivot	 
-      title: 是否显示进度文字	
+      description: 是否置灰
+    - name: show-pivot
+      title: 是否显示进度文字
       type: boolean
       default: true
-      description: 是否显示进度文字		
+      description: 是否显示进度文字
   slots: false
   events:
-
