--- a/src/radio-group/api.yaml
+++ b/src/radio-group/api.yaml
@@ -93,7 +93,7 @@
       options:
         - value: right
           title: 右
-        - value: lfet
+        - value: left
           title: 左
       default: right
       description: 文本位置
