--- a/src/circle/api.yaml
+++ b/src/circle/api.yaml
@@ -24,13 +24,25 @@
       type: numer | string
       default: 100px
       description: 圆环直径，默认单位为 px
+    - name: color
+      title: 进度条颜色
+      type: string
+      description: 进度条颜色
+    - name: layer-color
+      title: 轨道颜色
+      type: string
+      description: 轨道颜色
+    - name: fill
+      title: 填充颜色
+      type: string
+      description: 填充颜色
     - name: text
       title: 文字
       type: string
       description: 文字
     - name: stroke-width
       title: 进度条宽度
-      type: numer | string
+      type: number | string
       default: 40
       description: 进度条宽度
     - name: clockwise
