--- a/src/rate/api.yaml
+++ b/src/rate/api.yaml
@@ -9,7 +9,7 @@
   attrs:
     - name: value
       title: 当前分值
-      type: string
+      type: number
       sync: true
       model: true
       description: 当前分值
@@ -45,9 +45,12 @@
       description: 禁用时的颜色
     - name: icon
       title: 选中时的图标名称或图片链接
-      type: string
-      default: star
-      description: 禁用时的颜色
+      type: icon
+      description: 选中时的图标名称或图片链接
+    - name: void-icon
+      title: 未选中时的图标名称或图片链接
+      type: icon
+      description: 选中时的图标名称或图片链接
     - name: allow-half
       title: 半选
       type: boolean
