feat: add themeconfig

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "move-yaml": "node bin/move-yaml",
     "move-docs": "node bin/move-docs",
     "screenshot": "node bin/screenshot",
+    "genThemeConfig": "node ./scripts/genThemeConfig/index.js",
     "deploy:dev": "node ./scripts/lcap && lcap deploy dist-theme --platform http://defaulttenant.lcap.dev.env.com && node bin/deploy-lcp-images --platform=http://defaulttenant.lcap.dev.env.com",
     "deploy:test": "node ./scripts/lcap && lcap deploy dist-theme --platform http://defaulttenant.lcap.ha.test.com && node bin/deploy-lcp-images --platform=http://defaulttenant.lcap.ha.test.com",
     "deploy:pre": "node ./scripts/lcap && lcap deploy dist-theme --platform http://defaulttenant.lcap.ha.dri.com && node bin/deploy-lcp-images --platform=http://defaulttenant.lcap.ha.dri.com",
@@ -95,6 +96,8 @@
     "@vusion/validator": "^0.3.0",
     "@xgheaven/nos-node-sdk": "^0.2.5",
     "cross-env": "^7.0.3",
+    "fs-extra": "^10.1.0",
+    "postcss": "^8.4.19",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "2.1.0",
     "shx": "^0.3.3",
