--- a/src/tabbar/api.yaml
+++ b/src/tabbar/api.yaml
@@ -34,7 +34,7 @@
       support:
         - name: van-tabbar-item
           title: 标签项
-          snippet: '<van-tabbar-item icon="默认" text="标签" style="font-size:24px"></van-tabbar-item>'
+          snippet: '<van-tabbar-item icon="默认" style="font-size:24px"><van-text text="标签"></van-text></van-tabbar-item>'
   events:
     - name: change
       title: 切换后
