fix: 赋值粘贴需求 需要更改某些组件yamlyaml配置

--- a/src/iconv/api.yaml
+++ b/src/iconv/api.yaml
@@ -60,6 +60,7 @@
     - concept: Slot
       name: default
       description: 插入文本或HTML
+      advanced: true
   events:
     - name: click
       title: 点击后
