feat: 测试反馈 对用户不友好 要默认关掉

--- a/src/sidebar/api.yaml
+++ b/src/sidebar/api.yaml
@@ -14,7 +14,7 @@
     - name: route
       title: 是否开启路由模式
       type: boolean
-      default: true
+      default: false
       description: 是否开启路由模式
   slots:
     - concept: Slot
