chore: switch vant@3 npm tag to latest-v3

--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -12,6 +12,9 @@
     "es",
     "lib"
   ],
+  "npm": {
+    "tag": "latest-v3"
+  },
   "scripts": {
     "dev": "vant-cli dev",
     "lint": "vant-cli lint",
