chore: adjust deploy site

--- a/.github/workflows/deploy-v3-site.yml
+++ b/.github/workflows/deploy-v3-site.yml
@@ -45,5 +45,4 @@ jobs:
           folder: packages/vant/site-dist
           token: ${{ secrets.VANT_UI_TOKEN }}
           repository-name: vant-ui/vant-ui.github.io
-          target-folder: vant
-          clean: false
+          target-folder: vant/v3
