--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -21,7 +21,7 @@
     "test": "vant-cli test",
     "build": "vant-cli build",
     "build:site": "vant-cli build-site",
-    "release": "cp ../../README.md ./ && vant-cli release && rm ./README.md",
+    "release": "cp ../../README.md ./ && vant-cli release --tag latest-v3 && rm ./README.md",
     "release:site": "pnpm build:site && npx gh-pages -d site-dist --add",
     "test:watch": "vant-cli test --watch",
     "test:coverage": "open test/coverage/index.html"
