--- a/src/slider/api.yaml
+++ b/src/slider/api.yaml
@@ -9,67 +9,54 @@
   attrs:
     - name: value
       title: 当前进度百分比
-      type: number | string
+      type: number
       sync: true
       model: true
-      default: 0
-      description: 当前进度百分比
     - name: max
       title: 最大值
-      type: number | string
+      type: number
       sync: true
       default: 100
-      description: 最大值
     - name: min
       title: 最小值
-      type: number | string
+      type: number
       sync: true
       default: 0
-      description: 最小值
     - name: step
       title: 步长
       type: number | string
       sync: true
       default: 0
-      description: 步长
     - name: bar-height
-      title: 进度条高度
-      type: number | string
+      title: 进度条高度(px)
+      type: number
       default: 2
-      description: 进度条高度，默认单位为px
     - name: button-size
-      title: 滑块按钮大小
-      type: number | string
+      title: 滑块按钮大小(px)
+      type: number
       default: 24px
-      description: 滑块按钮大小，默认单位为px
     - name: active-color
       title: 进度条激活态颜色
       type: string
-      description: 进度条激活态颜色
     - name: inactive-color
       title: 进度条非激活态颜色
       type: string
-      description: 进度条非激活态颜色
     - name: range
       title: 是否开启双滑块模式
       type: boolean
       default: false
-      description: 是否开启双滑块模式
     - name: disabled
       title: 是否禁用滑块
       type: boolean
       default: false
-      description: 是否禁用滑块
     - name: vertical
       title: 是否垂直展示
       type: boolean
       default: false
-      description: 是否垂直展示
     - name: custom
       title: 是否自定义组件
       type: boolean
       default: false
-      description: 是否自定义组件
   slots: false
   events:
     - name: input
