--- a/src/fieldinput/api.yaml
+++ b/src/fieldinput/api.yaml
@@ -13,6 +13,14 @@
           title: 文本
         - value: password
           title: 密码
+        - value: integer
+          title: 整数
+        - value: rndinteger
+          title: 随机整数
+        - value: point
+          title: 小数
+        - value: card
+          title: 身份证
       default: text
       description: 输入框的类型
     - name: value
@@ -39,6 +47,34 @@
       type: boolean
       default: false
       description: 是否禁用
+    - name: maxlength
+      title: 输入最大长度
+      type: string
+      description: 输入最大长度
+    - name: keyboard-title
+      title: 键盘标题
+      type: string
+      description: 键盘标题
+    - name: keytheme
+      title: 键盘样式
+      type: string
+      options:
+        - value: native
+          title: 默认键盘
+        - value: custom
+          title: 定制键盘
+      default: native
+      description: 是否禁用
+    - name: keyboard-theme
+      title: 定制键盘布局
+      type: string
+      options:
+        - value: default
+          title: 默认
+        - value: custom
+          title: 定制
+      default: default
+      description: 定制键盘布局
     - name: prefix
       title: 前缀图标
       type: string
