feat: 布局类组件flex模式更改

--- a/src/row/api.yaml
+++ b/src/row/api.yaml
@@ -180,6 +180,13 @@
       dependency:
         - mode: flex
           direction: horizontal
+      toggleupdate:
+        - value: space-between
+          updateData:
+            gap: normal
+        - value: space-around
+          updateData:
+            gap: normal
     - name: align
       title: 纵轴对齐
       type: string
@@ -266,6 +273,13 @@
       dependency:
         - mode: flex
           direction: vertical
+      toggleupdate:
+        - value: space-between
+          updateData:
+            gap: normal
+        - value: space-around
+          updateData:
+            gap: normal
     - name: wrap
       title: 是否换行
       type: boolean
@@ -292,6 +306,9 @@
       description: 内容块间隙大小
       dependency:
         - mode: flex
+          '!justify':
+            - space-between
+            - space-around
     - name: span
       title: 占据列数
       type: number
