feat(cli): bump vite v4 (#11414)
* feat(cli): bump vite v4

* chore: bump vite plugin

--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -55,14 +55,14 @@
     "@types/jest": "^29.1.1",
     "@vant/eslint-config": "^3.5.0",
     "@vant/touch-emulator": "^1.4.0",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.8",
     "commander": "^9.4.0",
     "consola": "^2.15.3",
     "conventional-changelog": "^3.1.25",
-    "esbuild": "^0.15.9",
+    "esbuild": "^0.16.10",
     "eslint": "^8.23.0",
     "execa": "^5.1.1",
     "fast-glob": "^3.2.11",
@@ -86,7 +86,7 @@
     "release-it": "^15.4.1",
     "transliteration": "^2.3.5",
     "typescript": "^4.8.2",
-    "vite": "3.1.8",
+    "vite": "^4.0.3",
     "vite-plugin-html": "^2.1.2",
     "vite-plugin-md": "^0.11.9",
     "vue-router": "^4.1.5"
