--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -42,6 +42,7 @@
     "@jest/types": "^29.1.2",
     "@types/fs-extra": "^9.0.13",
     "@types/less": "^3.0.3",
+    "@types/lodash": "^4.14.191",
     "@types/markdown-it": "^12.2.3",
     "vue": "^3.2.45"
   },
@@ -68,9 +69,10 @@
     "husky": "^8.0.1",
     "jest": "^29.1.2",
     "jest-canvas-mock": "^2.4.0",
-    "jest-serializer-html": "^7.1.0",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-serializer-html": "^7.1.0",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.6.4",
     "nano-staged": "^0.8.0",
@@ -80,10 +82,10 @@
     "postcss-load-config": "^3.1.4",
     "prettier": "^2.7.1",
     "release-it": "^15.4.1",
+    "terser": "^5.16.1",
     "transliteration": "^2.3.5",
     "typescript": "^4.8.2",
     "vite": "^4.0.3",
-    "vite-plugin-html": "^2.1.2",
     "vite-plugin-md": "^0.11.9",
     "vue-router": "^4.1.5"
   },
